//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table users {
  id String [pk]
  username String [unique, not null]
  password String [not null]
  age Int [not null]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime [default: `now()`]
  role UserRole [not null, default: 'customer']
  Ticket tickets [not null]
  Watch watches [not null]
}

Table movies {
  id String [pk]
  name String [not null]
  ageRestriction Int [not null]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime [default: `now()`]
  Session sessions [not null]
  Watch watches [not null]
}

Table sessions {
  id String [pk]
  movieId String [not null]
  movie movies [not null]
  date DateTime [not null]
  roomNumber Int [not null]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime [default: `now()`]
  Ticket tickets [not null]
  Watch watches [not null]

  indexes {
    (date, roomNumber) [unique]
  }
}

Table tickets {
  id String [pk]
  sessionId String [not null]
  session sessions [not null]
  userId String [not null]
  user users [not null]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime [default: `now()`]
  status TicketStatus [not null, default: 'active']
  Watch watches [not null]
}

Table watches {
  id String [pk]
  userId String [not null]
  user users [not null]
  ticketId String [unique, not null]
  ticket tickets [not null]
  sessionId String [not null]
  session sessions [not null]
  movieId String [not null]
  movie movies [not null]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime [default: `now()`]
}

Enum UserRole {
  manager
  customer
}

Enum TicketStatus {
  active
  used
}

Ref: sessions.movieId > movies.id [delete: Cascade]

Ref: tickets.sessionId > sessions.id [delete: Cascade]

Ref: tickets.userId > users.id [delete: Cascade]

Ref: watches.userId > users.id [delete: Cascade]

Ref: watches.ticketId > tickets.id [delete: Cascade]

Ref: watches.sessionId > sessions.id [delete: Cascade]

Ref: watches.movieId > movies.id [delete: Cascade]